SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

New preference to define the maximum column width for text outputs, see menu File --> Global Preferences -->  tab SQL --> section General.
  This was asked for in bug #1256.

Up to now SQL result tabs could be toggled sticky which means all following SQL results will go into the sticky tab.
  From now on there is also an option to toggle SQL result tabs anchored.
  An anchored tab will not be removed, when the maximum number of tabs is reached. If you close an anchored tab you will be asked to confirm.
  Both toggles, sticky and anchored, can be accessed by the tabs right mouse menu.

The text fields of the "Copy separated by ..." dialog now grow with the dialog's size.

#362/#173 Keyboard shortcuts are now configurable, see menu File --> "Global Preferences" --> tab "Keyboard shortcuts"
 The default shortcut for the "Quote SQL" action was changed from (ctrl alt Q) to (ctrl shift Q) on account of bug #1368.

When reconnecting a Session (ctrl alt T) the connect data (JDBC-URL, user, password) can now be changed.
  This can be useful for example for Docker (or similar container) driven tests when the container was restarted with changed port.

Find Alias window (ctrl alt shift F): Last search string is now selected when window is opened.

Improved parsing for SQL editor: Table names tended to be marked as error (red) until another character was entered.

#331 Add "New SQL tab" --> The "New SQL Worksheet" tool bar button can now be
  changed into a "New SQL Tab" button which opens a new SQL tab inside the main Session window.


Bug fixes:

#1367 "Remove quotes" on an unquoted SQL statement deletes that statement

#1366 Clicking X in dialog "Unsaved changes" is now the same as "Cancel" but was the same as "No".