@@ -1,4 +1,7 @@
+
 recentfiles.RecentFilesDialog.title=Open recent or favourite file
+recentfiles.RecentFilesDialog.title.connect=Connect to alias "{0}" and open recent or favourite file
+
 recentfiles.RecentFilesDialog.configurations=Configurations
 recentfiles.RecentFilesDialog.maxNumber=Maximum number of recent files:
 recentfiles.RecentFilesDialog.addFilesTo=Add file or folder to:
@@ -12,7 +15,7 @@ recentfiles.RecentFilesDialog.append=Append file contents to editor
 
 
 recentfiles.RecentFilesDialog.openFile=Open selected file
-recentfiles.RecentFilesDialog.openFileInNewSession=Open selected file in new Session
+recentfiles.RecentFilesDialog.openFileInNewSession.for.alias=Open selected file in new Session for alias "{0}"
 
 recentfiles.RecentFilesDialog.close=Close
 
@@ -32,3 +35,6 @@ RecentFilesController.fileDoesNotExist=The file does not exist.\nDo you want to 
 RecentFilesController.fileIsNotReadable=The file is not readable.
 
 RecentFilesManager.old.version.warning=Recent files settings are lost due to changes concerning Java 9 compatibility. Former settings can be found in {0}.
+
+RecentFilesController.open.in.file.manager=Open in file manager
+RecentFilesController.open.parent.in.file.manager=Open path in file manager
